src/test/ui/consts/partial_qualif.stderr
error[E0492]: cannot borrow a constant which may contain interior mutability, create a static instead
  --> $DIR/partial_qualif.rs:5:12
   |
LL | const FOO: &(Cell<usize>, bool) = {
   |            ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0492`.
